updating my cv specialities + summary

--- a/index.html
+++ b/index.html
@@ -73,26 +73,29 @@
         <p class="p-0 m-0"><b class="text-primary">Contact number:</b> +359877012349</p>
         <p><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
         <p>
-            Hello, thank you for taking time watching my CV, my name is Nedelcho. I am a student at Software University
-            Sofia who seek to join in a team of professionals and taste the real experience of being into programming on
-            the market. So far, my primary focus was to learn to write clean, elegant and efficient code. I am
-            proficient
-            in JavaScript, HTML, CSS, Bootstrap. Since the summer of 2017 I have been writing code in Javascript and
-            learning from one of the best lecturers in the country.
+            Experienced software developer, proficient in FE and BE development of web based applications. A real team player,
+            that got used to bring the things to an end. Almost of five years experience focused on web development as well as communication with clients.
+            I am passionate about producing a well structured, readable and without any bugs code. The need of learning new skills and technology,
+            always makes me to be keen on about studying new technologies or trends. I have programming skills, as well as a sense for customer focus and team collaborations.
+            Currently, most of my job is split between leading a small team of developers, working as TDM and being a developer in the same time.
         </p>
     </section>
     <!--Specialties-->
     <section class="mx-auto my-5">
         <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
+        <ol>
+            <lh>Front and backend development with Javascript</lh>
+            <li>Javascript frameworks like React, jQuery</li>
+            <li>Building and consuming RESTful web APIs.</li>
+            <li>Identity management and Directories</li>
+        </ol>
     </section>
     <!--Experience-->
     <section class="m-auto">
         <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
         <div class="container col-12 m-auto">
             <div class="container m-auto col-10 row">
-                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2"
-                        style="max-width:
-                17rem;">
+                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2" style="max-width:17rem;">
                     <div class="card-header h4 text-center">11/2018 to Current</div>
                     <div class="card-body">
                         <h4 class="card-title">Software Group BG AD</h4>
