updating my cv specialities + summary

--- a/index.html
+++ b/index.html
@@ -81,14 +81,16 @@
         </p>
     </section>
     <!--Specialties-->
-    <section class="mx-auto my-5">
+    <section class="m-auto my-5">
         <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
-        <ol>
-            <lh>Front and backend development with Javascript</lh>
-            <li>Javascript frameworks like React, jQuery</li>
-            <li>Building and consuming RESTful web APIs.</li>
-            <li>Identity management and Directories</li>
-        </ol>
+        <div class="m-auto text-center">
+            <ul>
+                <lh>Front and backend development with Javascript</lh>
+                <li>Javascript frameworks like React, jQuery</li>
+                <li>Building and consuming RESTful web APIs.</li>
+                <li>Identity management and Directories</li>
+            </ul>
+        </div>
     </section>
     <!--Experience-->
     <section class="m-auto">
