updating my cv specialities + summary

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     <!--Specialties-->
     <section class="m-auto my-5">
         <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
-        <div class="m-auto text-center">
-            <ul>
-                <lh>Front and backend development with Javascript</lh>
-                <li>Javascript frameworks like React, jQuery</li>
-                <li>Building and consuming RESTful web APIs.</li>
-                <li>Identity management and Directories</li>
+        <div class="container col-4 m-auto text-center">
+            <ul class="text-center">
+                <li class="text-center">Front and backend development with Javascript</li>
+                <li class="text-center">Javascript frameworks like React, jQuery</li>
+                <li class="text-center">Building and consuming RESTful web APIs.</li>
+                <li class="text-center">Identity management and Directories</li>
             </ul>
         </div>
     </section>
