--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
         <div class="container col-4 m-auto text-center">
             <ul class="text-center">
-                <li class="text-center">Front and backend development with Javascript</li>
-                <li class="text-center">Javascript frameworks like React, jQuery</li>
-                <li class="text-center">Building and consuming RESTful web APIs.</li>
-                <li class="text-center">Identity management and Directories</li>
+                <li class="text-left">Front and backend development with Javascript</li>
+                <li class="text-left">Javascript frameworks like React, jQuery</li>
+                <li class="text-left">Building and consuming RESTful web APIs.</li>
+                <li class="text-left">Identity management and Directories</li>
             </ul>
         </div>
     </section>
