--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <!--Specialties-->
     <section class="m-auto my-5">
         <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
-        <div class="container col-12 m-auto text-center">
-            <div class="m-auto">
+        <div class="container m-auto text-center">
+            <div class="container col-4 m-auto">
                 <ul class="text-center">
                     <li class="text-left">Front and backend development with Javascript</li>
                     <li class="text-left">Javascript frameworks like React, jQuery</li>
