--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </section>
     <!--Experience-->
-    <section class="m-auto">
+    <section class="m-auto my-5">
         <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
         <div class="container col-12 m-auto">
             <div class="container m-auto col-10 row">
