--- a/index.html
+++ b/index.html
@@ -103,11 +103,15 @@
                     <div class="card-header h4 text-center">11/2018 to Current</div>
                     <div class="card-body">
                         <h4 class="card-title">Software Group BG AD</h4>
-                        <p class="card-text">After hundreds of exercises written on JavaScript I can truly say that, JS
-                            is the programming language which inspires me to go deeply into the web development. Up to
-                            now, I become familiar with many programming patterns and libraries as: JQuery, Sammy.js,
-                            Babel, AJAX, asynchronous programming, promises, creating simple SPA Application using
-                            routing libraries and so on.</p>
+                        <p class="card-text">Software Group is a global technology company specialized in digitalization and integration solutions for financial service providers.</p>
+                        <div class="container col-4 m-auto">
+                            <ul class="text-center">
+                                <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance.</li>
+                                <li class="text-left">Developed, maintained and enhanced web services and technology platforms.</li>
+                                <li class="text-left">Participated in introduction of new features for websites.</li>
+                                <li class="text-left">Suggested and implemented new features for existing apps.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
