--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
+                    <a class="nav-link" href="#specialities">Specialities</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#education">Education</a>
@@ -82,7 +82,7 @@
     </section>
     <!--Specialties-->
     <section class="m-auto my-5">
-        <h2 id="skills" class="h2 text-center">SPECIALTIES</h2>
+        <h2 id="specialities" class="h2 text-center">SPECIALTIES</h2>
         <div class="container m-auto text-center">
             <div class="container col-4 m-auto">
                 <ul class="text-center">
@@ -256,71 +256,6 @@
             </div>
         </div>
     </section>
-    <!-- Projects
-    <section id="projectSec" class="pb-5 mb-5">
-        <h2 id="projects" class="h2 text-center">PROJECTS</h2>
-        <div class="accordion col-10 m-auto" id="accordionExample">
-            <div class="card">
-                <div class="card-header" id="headingOne"  data-toggle="collapse" data-target="#collapseOne"
-                     aria-expanded="true" aria-controls="collapseOne">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                                aria-expanded="true" aria-controls="collapseOne">
-                            Cashier Project
-                        </button>
-                    </h5>
-                </div>
-
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                     data-parent="#accordionExample">
-                    <div class="card-body">
-                        Cashier is a very simple JavaScript SPA application using Sammy.js routing library and Kinvey as
-                        database. It include Login/Logout and Register functionalities as well as making cashier
-                        calculations simulating real experience.
-                        <a href="#projects"
-                           onclick="window.open('https://github.com/nikiqta/JsApp-Cashier', '_blank')">Cashier
-                            Github</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingTwo" data-toggle="collapse"
-                     data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            CarTube Project
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body">
-                        CarTube is a very simple JavaScript SPA application using Sammy.js routing library and Kinvey as
-                        database. It include Login/Logout and Register functionalities as well as posting,
-                        editing and deleting adds.
-                        <a href="#projects" onclick="window.open('https://github.com/nikiqta/JsApp-CarTube', '_blank')">CarTube Github</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingThree" data-toggle="collapse"
-                     data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Budget Planner (React SPA App)
-                        </button>
-                    </h5>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                    <div class="card-body">
-                     I am currently developing a React SPA App with similar functionalities to the above two simple
-                        projects.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <!--Education-->
     <section>
         <h2 id="education" class="h2 mb-3 text-center">EDUCATION</h2>
