--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <section class="m-auto my-5">
         <h2 id="specialities" class="h2 text-center">SPECIALTIES</h2>
         <div class="container m-auto text-center">
-            <div class="container col-4 m-auto">
-                <ul class="text-center">
+            <div class="container col-12 m-auto">
+                <ul class="text-left">
                     <li class="text-left">Front and backend development with Javascript</li>
                     <li class="text-left">Javascript frameworks like React, jQuery</li>
                     <li class="text-left">Building and consuming RESTful web APIs.</li>
