--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </p>
     </section>
     <!--Specialties-->
-    <section class="m-auto my-5">
+    <section class="m-auto my-5 mb-5">
         <h2 id="specialities" class="h2 text-center">SPECIALTIES</h2>
         <div class="container m-auto text-center">
             <div class="container col-12 m-auto">
