--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#specialities">Specialities</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#experience">Experience</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#specialities">Specialities</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#education">Education</a>
@@ -81,7 +81,7 @@
         </p>
     </section>
     <!--Specialties-->
-    <section class="m-auto my-5 mb-5">
+    <section class="w-50 m-auto mb-5">
         <h2 id="specialities" class="h2 text-center">SPECIALTIES</h2>
         <div class="container m-auto text-center">
             <div class="container col-4 m-auto">
