--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#experience">Experience</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#specialities">Specialities</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="#skills">Skills</a>
                 </li>
@@ -104,7 +104,7 @@
         </div>
     </section>
      <!--Specialties-->
-     <section class="w-50 m-auto mb-5">
+     <!-- <section class="m-auto mb-5">
         <h2 id="specialities" class="h2 text-center">SPECIALTIES</h2>
         <div class="container m-auto text-center">
             <div class="container col-4 m-auto">
@@ -116,7 +116,7 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--Skills-->
     <section class="mx-auto my-5">
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
