adding IELTS certifiacte + changing the cv main picture

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!--About-->
     <section class="container text-center mt-5 mb-5">
         <div id="about" class="container text-center w-75">
-            <img src="images/nedelcho.jpg" alt="Nedelcho Karageorgiev"
+            <img src="images/Nedelcho_Karageorgiev.jpg" alt="Nedelcho Karageorgiev"
                  class="rounded" style="width: 30%"/>
         </div>
         <h1 class="h1 pt-3">
@@ -305,6 +305,12 @@
             <img data-toggle="modal" data-target="#jsReact" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/reactJS.jpg" alt="reactJS"/>
         </div>
+        <div class="container col-12 w-100 m-auto text-center">
+            <img data-toggle="modal" data-target="#jsExpress" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
+                 src="certificates/expressJS.jpg" alt="expressJS"/>
+            <img data-toggle="modal" data-target="#jsReact" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
+                 src="certificates/IELTS.jpg" alt="ielts"/>
+        </div>
 
         <div class="modal fade" id="prBasic" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
@@ -366,6 +372,12 @@
                 <img class="h-50 w-75" src="certificates/reactJS.jpg"/>
             </div>
         </div>
+        <div class="modal fade" id="jsReact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog text-center">
+            <img class="h-50 w-75" src="certificates/IELTS.jpg"/>
+        </div>
+    </div>
     </section>
 </main>
 <footer class="bg-primary">
