adding IELTS certifiacte + changing the cv main picture

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <div class="container col-12 w-100 m-auto text-center">
             <img data-toggle="modal" data-target="#jsExpress" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/expressJS.jpg" alt="expressJS"/>
-            <img data-toggle="modal" data-target="#jsReact" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
+            <img data-toggle="modal" data-target="#ielts" class="my-2 mx-auto col-sm-4 col-lg-2 col-xl-2"
                  src="certificates/IELTS.jpg" alt="ielts"/>
         </div>
 
@@ -372,7 +372,7 @@
                 <img class="h-50 w-75" src="certificates/reactJS.jpg"/>
             </div>
         </div>
-        <div class="modal fade" id="jsReact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        <div class="modal fade" id="ielts" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog text-center">
             <img class="h-50 w-75" src="certificates/IELTS.jpg"/>
