--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                JavaScript Front-End Development
+                JavaScript Front-End Development (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -131,7 +131,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                React-js
+                React-js (5+ years, including: react, react-dom, react-router-dom, react-redux and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -140,7 +140,16 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Webpack Bundling
+                Redux (5+ years, including: redux, redux-thunk and etc.)
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Webpack Bundling (5+ years, including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -149,7 +158,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                YUP and Joi Validations
+                YUP and Joi Validations (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -158,7 +167,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Material-UI
+                Material-UI (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -167,7 +176,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                JavaScript OOP ES6
+                JavaScript OOP ES6 (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -176,16 +185,16 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Typescript
+                Typescript (1+ year)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                HTML
+                HTML (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -194,7 +203,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                CSS, SASS
+                CSS (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
@@ -203,7 +212,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Bootstrap
+                Bootstrap (2+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
@@ -212,7 +221,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Node-js
+                Node-js (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
@@ -221,7 +230,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Express-js
+                Express-js (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
@@ -230,16 +239,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Payment Integrations with Node.js (Borica, Epay, Halkbank)
-            </h4>
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
-            </div>
-        </div>
-        <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Database T-SQL
+                Database T-SQL (2+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
@@ -248,7 +248,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Database Mongo-DB
+                Database Mongo-DB (0.5 years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar"
