upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -255,6 +255,33 @@
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
             </div>
         </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Git-flow (5+ years)
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Code review (5+ years)
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+            </div>
+        </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                Agile and Waterfall methodologies (5+ years)
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+            </div>
+        </div>
     </section>
     <!--Education-->
     <section>
