upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -266,15 +266,6 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Code review (5+ years)
-            </h4>
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
-            </div>
-        </div>
-        <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
                 Agile and Waterfall methodologies (5+ years)
             </h4>
             <div class="progress">
@@ -287,6 +278,11 @@
     <section>
         <h2 id="education" class="h2 mb-3 text-center">EDUCATION</h2>
         <div class="container row m-auto">
+            <blockquote class="blockquote col my-2 mx-auto">
+                <h4 class="h4">Software University Sofia (SoftUni)</h4>
+                <p class="mb-0 text-success">Python Web Development.</p>
+                <p class="mb-0">2023 - at present...</p>
+            </blockquote>
             <blockquote class="blockquote col my-2 mx-auto">
                 <h4 class="h4">Software University Sofia (SoftUni)</h4>
                 <p class="mb-0 text-success">JavaScript Web Development.</p>
