upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <blockquote class="blockquote col my-2 mx-auto">
                 <h4 class="h4">Software University Sofia (SoftUni)</h4>
                 <p class="mb-0 text-success">JavaScript Web Development.</p>
-                <p class="mb-0">2017 - at present...</p>
+                <p class="mb-0">2017 - 2019</p>
             </blockquote>
             <blockquote class="blockquote  col my-2 mx-auto">
                 <h4 class="h4">Kensington and Chelsea collage (London)</h4>
