upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-<header>
+<header class="header-menu">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">Nedelcho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
@@ -56,7 +56,7 @@
         </div>
     </nav>
 </header>
-<main>
+<main class="pt-5">
     <!--About-->
     <section class="container text-center mt-5 mb-5">
         <div id="about" class="container text-center w-75">
