upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -280,22 +280,22 @@
         <div class="container row m-auto">
             <blockquote class="blockquote col my-2 mx-auto">
                 <h4 class="h4">Software University Sofia (SoftUni)</h4>
-                <p class="mb-0 text-success">Python Web Development.</p>
+                <p class="mb-0 text-success">Python Web Development</p>
                 <p class="mb-0">2023 - at present...</p>
             </blockquote>
             <blockquote class="blockquote col my-2 mx-auto">
                 <h4 class="h4">Software University Sofia (SoftUni)</h4>
-                <p class="mb-0 text-success">JavaScript Web Development.</p>
+                <p class="mb-0 text-success">JavaScript Web Development</p>
                 <p class="mb-0">2017 - 2019</p>
             </blockquote>
             <blockquote class="blockquote  col my-2 mx-auto">
                 <h4 class="h4">Kensington and Chelsea collage (London)</h4>
-                <p class="mb-0 text-success">Academical English courses.</p>
+                <p class="mb-0 text-success">Academical English courses</p>
                 <p class="mb-0">2014-2017.</p>
             </blockquote>
             <blockquote class="blockquote  col my-2 mx-auto">
                 <h4 class="h4">Vocational High School of Mechanical Engineering (Sliven)</h4>
-                <p class="mb-0 text-success">Internal combustion engines.</p>
+                <p class="mb-0 text-success">Internal combustion engines</p>
                 <p class="mb-0">2002-2007</p>
             </blockquote>
         </div>
