--- a/index.html
+++ b/index.html
@@ -92,10 +92,17 @@
                         <p class="card-text">Software Group is a global technology company specialized in digitalization and integration solutions for financial service providers.</p>
                         <div class="container col-12 m-auto">
                             <ul class="text-left">
-                                <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance.</li>
-                                <li class="text-left">Developed, maintained and enhanced web services and technology platforms.</li>
-                                <li class="text-left">Participated in introduction of new features for websites.</li>
-                                <li class="text-left">Suggested and implemented new features for existing apps.</li>
+                                <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance</li>
+                                <li class="text-left">Developed, maintained and enhanced web services and technology platforms</li>
+                                <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements</li>
+                                <li class="text-left">Working knowledge of front end optimization and performance techniques</li>
+                                <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications</li>
+                                <li class="text-left">Participated in introduction of new features for websites</li>
+                                <li class="text-left">Suggested and implemented new features for existing apps</li>
+                                <li class="text-left">Develop well structured, modular and clean JavaScript</li>
+                                <li class="text-left">Analyze, optimize, and improve the code base</li>
+                                <li class="text-left">Familiar with source control systems such as git</li>
+                                <li class="text-left">Facilitate exchange of ideas between developers</li>
                             </ul>
                         </div>
                     </div>
