--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                JavaScript Front-End Development (5+ years)
+                JavaScript Front-End Development (5+ years, including: YUP and Joi Validations, Material-UI, Bootstrap and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -165,24 +165,6 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                YUP and Joi Validations (5+ years)
-            </h4>
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
-            </div>
-        </div>
-        <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Material-UI (5+ years)
-            </h4>
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
-            </div>
-        </div>
-        <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
                 JavaScript OOP ES6 (5+ years)
             </h4>
             <div class="progress">
@@ -201,7 +183,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                HTML (5+ years)
+                HTML-5 (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -210,7 +192,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                CSS (5+ years)
+                CSS-3 (5+ years)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
@@ -219,16 +201,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Bootstrap (2+ years)
-            </h4>
-            <div class="progress">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
-            </div>
-        </div>
-        <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Node-js (5+ years)
+                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
