upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                JavaScript Front-End Development (5+ years, including: YUP and Joi Validations, Material-UI, Bootstrap and etc.)
+                JavaScript Front-End Development (5+ years, including: YUP and Joi Validations, Jest, Material-UI, Bootstrap and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -138,7 +138,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                React-js (5+ years, including: react, react-dom, react-router-dom, react-redux and etc.)
+                React-js (5+ years, including: react, react-hook-form, react-dom, react-router-dom, react-redux and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -201,7 +201,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS and etc.)
+                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS, Mocha and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
