upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS, Mocha and etc.)
+                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
@@ -210,7 +210,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Express-js (5+ years)
+                Unit testing (5+ years including: Mocha, Jest)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
