--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@
         </div>
     </section>
      <!--Specialties-->
-     <!-- <section class="m-auto mb-5">
+     <section class="m-auto mb-5">
         <h2 id="specialities" class="h2 text-center">SPECIALTIES</h2>
         <div class="container m-auto text-center">
             <div class="container col-4 m-auto">
                 <ul class="text-center">
-                    <li class="text-left">Front and backend development with Javascript</li>
-                    <li class="text-left">Javascript frameworks like React, jQuery</li>
+                    <li class="text-left">Front and backend development with Javascript and Typescript</li>
+                    <li class="text-left">Javascript frameworks like: React, jQuery, Express.js</li>
                     <li class="text-left">Building and consuming RESTful web APIs.</li>
                     <li class="text-left">Identity management and Directories</li>
                 </ul>
             </div>
         </div>
-    </section> -->
+    </section>
     <!--Skills-->
     <section class="mx-auto my-5">
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
