upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                             <ul class="text-left">
                                 <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance</li>
                                 <li class="text-left">Developed, maintained and enhanced web services and technology platforms</li>
+                                <li class="text-left">Front and backend development with Javascript and Typescript</li>
+                                <li class="text-left">Javascript frameworks like: React, jQuery, Express.js</li>
+                                <li class="text-left">Building and consuming RESTful web APIs</li>
+                                <li class="text-left">Identity management and Directories</li>
                                 <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements</li>
                                 <li class="text-left">Working knowledge of front end optimization and performance techniques</li>
                                 <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications</li>
@@ -107,20 +111,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-     <!--Specialties-->
-     <section class="m-auto mb-5">
-        <h2 id="specialities" class="h2 text-center">SPECIALTIES</h2>
-        <div class="container m-auto text-center">
-            <div class="container col-4 m-auto">
-                <ul class="text-center">
-                    <li class="text-left">Front and backend development with Javascript and Typescript</li>
-                    <li class="text-left">Javascript frameworks like: React, jQuery, Express.js</li>
-                    <li class="text-left">Building and consuming RESTful web APIs.</li>
-                    <li class="text-left">Identity management and Directories</li>
-                </ul>
             </div>
         </div>
     </section>
