upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                React-js (5+ years, including: react, react-hook-form, react-dom, react-router-dom, react-redux and etc.)
+                React-js (5+ years, including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -191,7 +191,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left">
-                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS and etc.)
+                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)
             </h4>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
