--- a/index.html
+++ b/index.html
@@ -243,6 +243,15 @@
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
             </div>
         </div>
+        <div class="container col-10 my-2">
+            <h4 class="h4 text-left">
+                English level - B2
+            </h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+            </div>
+        </div>
     </section>
     <!--Education-->
     <section>
