upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
     <section class="mx-auto my-5">
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                JavaScript Front-End Development (5+ years, including: YUP and Joi Validations, Jest, Material-UI, Bootstrap and etc.)
-            </h4>
+            <p class="p-0 m-0">
+                <h4 class="h4 text-left">JavaScript Front-End Development </h4>
+                (5+ years, including: YUP and Joi Validations, Jest, Material-UI, Bootstrap and etc.)
+            </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
