--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left">JavaScript Front-End Development </h4>
-                (5+ years, including: YUP and Joi Validations, Jest, Material-UI, Bootstrap and etc.)
+                <h4 class="h4 text-left">JavaScript Front-End Development (5+ years)</h4>
+                Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap and etc.
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -128,27 +128,30 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                React-js (5+ years, including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)
-            </h4>
+            <p class="p-0 m-0">
+                <h4 class="h4 text-left">React-js (5+ years)</h4>
+                Including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.
+            </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Redux (5+ years, including: redux, redux-thunk and etc.)
-            </h4>
+            <p class="p-0 m-0">
+                <h4 class="h4 text-left"> Redux (5+ years)</h4>
+                Including: redux, redux-thunk and etc.
+            </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Webpack Bundling (5+ years, including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)
-            </h4>
+            <p class="p-0 m-0">
+                <h4 class="h4 text-left">Webpack (5+ years)</h4>
+                Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.
+            </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -191,18 +194,20 @@
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Node-js (5+ years, including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)
-            </h4>
+            <p class="p-0 m-0">
+                <h4 class="h4 text-left">Node-js (5+ years)</h4>
+                Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.
+            </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
             </div>
         </div>
         <div class="container col-10 my-2">
-            <h4 class="h4 text-left">
-                Unit testing (2+ years including: Mocha, Jest)
-            </h4>
+            <p class="p-0 m-0">
+                <h4 class="h4 text-left">Unit testing (2+ years)</h4>
+                Including: Mocha, Jest
+            </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
