upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left">JavaScript Front-End Development (5+ years)</h4>
-                Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap and etc.
+                <h4 class="h4 text-left skills-in ">JavaScript Front-End Development (5+ years)</h4>
+                Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -129,7 +129,7 @@
         </div>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left">React-js (5+ years)</h4>
+                <h4 class="h4 text-left skills-inc">React-js (5+ years)</h4>
                 Including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.
             </p>
             <div class="progress">
@@ -139,7 +139,7 @@
         </div>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left"> Redux (5+ years)</h4>
+                <h4 class="h4 text-left skills-inc"> Redux (5+ years)</h4>
                 Including: redux, redux-thunk and etc.
             </p>
             <div class="progress">
@@ -149,7 +149,7 @@
         </div>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left">Webpack (5+ years)</h4>
+                <h4 class="h4 text-left skills-inc">Webpack (5+ years)</h4>
                 Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.
             </p>
             <div class="progress">
@@ -195,7 +195,7 @@
         </div>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left">Node-js (5+ years)</h4>
+                <h4 class="h4 text-left skills-inc">Node-js (5+ years)</h4>
                 Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.
             </p>
             <div class="progress">
@@ -205,7 +205,7 @@
         </div>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left">Unit testing (2+ years)</h4>
+                <h4 class="h4 text-left skills-inc">Unit testing (2+ years)</h4>
                 Including: Mocha, Jest
             </p>
             <div class="progress">
