upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
                 <h4 class="h4 text-left skills-in ">JavaScript Front-End Development (5+ years)</h4>
-                Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.
+                (Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -130,7 +130,7 @@
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
                 <h4 class="h4 text-left skills-inc">React-js (5+ years)</h4>
-                Including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.
+                (Including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -140,7 +140,7 @@
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
                 <h4 class="h4 text-left skills-inc"> Redux (5+ years)</h4>
-                Including: redux, redux-thunk and etc.
+                (Including: redux, redux-thunk and etc.)
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -150,7 +150,7 @@
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
                 <h4 class="h4 text-left skills-inc">Webpack (5+ years)</h4>
-                Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.
+                (Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
@@ -196,7 +196,7 @@
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
                 <h4 class="h4 text-left skills-inc">Node-js (5+ years)</h4>
-                Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.
+                (Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.))
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
@@ -206,7 +206,7 @@
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
                 <h4 class="h4 text-left skills-inc">Unit testing (2+ years)</h4>
-                Including: Mocha, Jest
+                (Including: Mocha, Jest)
             </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
