upgrading the skill info with years of expirience

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <p class="p-0 m-0">
-                <h4 class="h4 text-left skills-in ">JavaScript Front-End Development (5+ years)</h4>
+                <h4 class="h4 text-left skills-inc">JavaScript Front-End Development (5+ years)</h4>
                 (Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)
             </p>
             <div class="progress">
