--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 <header class="header-menu">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand fw-bold" href="#">Nedelcho</a>
+        <a class="navbar-brand bold-text" href="#">Nedelcho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
                 aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,25 +32,25 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#">Home</a>
+                    <a class="nav-link bold-text" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#about">About</a>
+                    <a class="nav-link bold-text" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#experience">Experience</a>
+                    <a class="nav-link bold-text" href="#experience">Experience</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#specialities">Specialities</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#skills">Skills</a>
+                    <a class="nav-link bold-text" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#education">Education</a>
+                    <a class="nav-link bold-text" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" href="#certificates">Certificates</a>
+                    <a class="nav-link bold-text" href="#certificates">Certificates</a>
                 </li>
             </ul>
         </div>
