--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">JavaScript Front-End Development (5+ years)</h4>
-            <span class="fst-italic">(Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
+            <span class="italic-text">(Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -127,7 +127,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">React-js (5+ years)</h4>
-            <span class="fst-italic">(Including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)</span>
+            <span class="italic-text">(Including: react, react-hook-form, react-dom, react-router-dom, react-redux, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -135,7 +135,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc"> Redux (5+ years)</h4>
-            <span class="fst-italic">(Including: redux, redux-thunk and etc.)</span>
+            <span class="italic-text">(Including: redux, redux-thunk and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -143,7 +143,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Webpack (5+ years)</h4>
-            <span class="fst-italic">(Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
+            <span class="italic-text">(Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -187,7 +187,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Node-js (5+ years)</h4>
-            <span class="fst-italic">(Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)</span>
+            <span class="italic-text">(Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -195,7 +195,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Unit testing (2+ years)</h4>
-            <span class="fst-italic">(Including: Mocha, Jest)</span>
+            <span class="italic-text">(Including: Mocha, Jest)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
