--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <header class="header-menu">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fw-bold">
         <a class="navbar-brand bold-text" href="#">Nedelcho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
                 aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -119,7 +119,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">JavaScript Front-End Development (5+ years)</h4>
-            <span class="italic-text">(Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
+            <span id="italic-text">(Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
