--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 </head>
 <body>
 <header class="header-menu">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fw-bold">
-        <a class="navbar-brand bold-text" href="#">Nedelcho</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fw-bold bold-text">
+        <a class="navbar-brand fw-bold bold-text" href="#">Nedelcho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
                 aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse fw-bold bold-text" id="navbarColor01">
+            <ul class="navbar-nav ml-auto bold-text fw-bold">
                 <li class="nav-item">
                     <a class="nav-link bold-text" href="#">Home</a>
                 </li>
