--- a/index.html
+++ b/index.html
@@ -22,35 +22,35 @@
 </head>
 <body>
 <header class="header-menu">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fw-bold bold-text">
-        <a class="navbar-brand fw-bold bold-text" href="#">Nedelcho</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Nedelcho</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
                 aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse fw-bold bold-text" id="navbarColor01">
-            <ul class="navbar-nav ml-auto bold-text fw-bold">
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link bold-text" href="#">Home</a>
+                    <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link bold-text" href="#about">About</a>
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link bold-text" href="#experience">Experience</a>
+                    <a class="nav-link" href="#experience">Experience</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#specialities">Specialities</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link bold-text" href="#skills">Skills</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link bold-text" href="#education">Education</a>
+                    <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link bold-text" href="#certificates">Certificates</a>
+                    <a class="nav-link" href="#certificates">Certificates</a>
                 </li>
             </ul>
         </div>
@@ -119,7 +119,7 @@
         <h2 id="skills" class="h2 text-center">SKILLS</h2>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">JavaScript Front-End Development (5+ years)</h4>
-            <span id="italic-text">(Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
+            <span>(Including: YUP and Joi Validations, Jest, Material-UI, Bootstrap, J-Query and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -135,7 +135,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc"> Redux (5+ years)</h4>
-            <span class="italic-text">(Including: redux, redux-thunk and etc.)</span>
+            <span>(Including: redux, redux-thunk and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
@@ -143,7 +143,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Webpack (5+ years)</h4>
-            <span class="italic-text">(Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
+            <span>(Including: webpack, webpack-cli, webpack-dev-server, webpack-bundle-analyzer, babel and ect.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -187,7 +187,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Node-js (5+ years)</h4>
-            <span class="italic-text">(Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)</span>
+            <span>(Including: Express.js Hapi.js, Axios, Restful API, CORS, jwt and etc.)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
@@ -195,7 +195,7 @@
         </div>
         <div class="container col-10 my-2">
             <h4 class="h4 text-left skills-inc">Unit testing (2+ years)</h4>
-            <span class="italic-text">(Including: Mocha, Jest)</span>
+            <span>(Including: Mocha, Jest)</span>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
